--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/purehugo"]
 	path = themes/purehugo
 	url = https://github.com/dplesca/purehugo.git
+[submodule "public"]
+	path = public
+	url = git@github.com:urandom-ctf/urandom-ctf.github.io.git
