--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public"]
 	path = public
 	url = git@github.com:urandom-ctf/urandom-ctf.github.io.git
+[submodule "themes/purehugo"]
+	path = themes/purehugo
+	url = ssh://git@git.urandom.team:62668/website/purehugo.git
