hide share options in individual page

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,9 @@ title = "urandom"
 
 pygmentsUseClasses=true
 
+[params]
+    hideShareOptions = true
+
 [markup.goldmark.renderer]
     unsafe = true
 
