--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
+[submodule "themes/fuji"]
+	path = themes/fuji
+	url = https://github.com/dsrkafuu/hugo-theme-fuji.git
 [submodule "public"]
 	path = public
-	url = git@github.com:urandom-ctf/urandom-ctf.github.io.git
-[submodule "themes/purehugo"]
-	path = themes/purehugo
-	url = ssh://git@git.urandom.team:62668/website/purehugo.git
+	url = https://github.com/urandom-ctf/urandom-ctf.github.io.git
